update: fixed issues in spacing of item description

--- a/assets/css/build.css
+++ b/assets/css/build.css
@@ -446,7 +446,7 @@ a {
   }
 }
 .product-items-container .product-wrapper .item-wrapper .product-content-wrapper {
-  height: 67px;
+  height: 5em;
   width: 100%;
   padding: 0 10px;
   display: flex;
@@ -458,15 +458,15 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 3px;
+  margin-bottom: 0.3125em;
 }
 .product-items-container .product-wrapper .item-wrapper .product-content-wrapper .product-title-wrapper h4 {
   font-weight: 600;
-  letter-spacing: 0;
-  line-height: 13px;
+  letter-spacing: -1.1px;
+  line-height: 12px;
 }
 .product-items-container .product-wrapper .item-wrapper .product-content-wrapper .product-description-wrapper {
-  margin-bottom: 3px;
+  margin-bottom: 0.3125em;
 }
 .product-items-container .product-wrapper .item-wrapper .product-content-wrapper .product-price-wrapper {
   display: flex;
@@ -478,6 +478,8 @@ a {
 .product-items-container .product-wrapper .item-wrapper .product-content-wrapper .product-price-wrapper .price-wrapper h3 {
   font-family: "Segoe Ui";
   margin-right: 4px;
+  font-size: 0.75em;
+  letter-spacing: -0.5px;
 }
 .product-items-container .product-wrapper .item-wrapper .product-content-wrapper .product-price-wrapper .price-wrapper h3.discount {
   color: #c2c2c2;
@@ -486,7 +488,7 @@ a {
 }
 .product-items-container .product-wrapper .item-wrapper .product-content-wrapper .product-price-wrapper .discount-detail {
   font-family: "Segoe Ui";
-  font-size: 10px;
+  font-size: 0.625em;
   color: #03a685;
   letter-spacing: 0;
 }
